--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <title>cod's homepage</title>
   <head>
-    what do i write here
+    <meta charset="UTF-8">
+    <title>cod's homepage</title>
   </head>
-  <p>heres idiot games if u want</p>
-  <a href="https://codtheidiot.github.io/idiotgaems">idiot gaems</a>
+  <body>
+    <p>heres idiot games if u want</p>
+    <a href="https://codtheidiot.github.io/idiotgaems">idiot gaems</a>
+  </body>
 </html>
